--- a/award-of-degree.html
+++ b/award-of-degree.html
@@ -6,8 +6,6 @@
 
     <!--====== Title ======-->
     <title>Oxford College</title>
-    <meta name="description"
-        content="We are absolutely focused on improving the student experience We have high expectations for students and a commitment to excellence We set high professional standards for all staff We are constantly seeking to improve We all work, as a team, for the success of the Oxford College national and international community We expect everyone to be reliable and positive and to act in accordance with Oxford College principles and procedures We respect, value and care for all members ." />
     <meta name="keywords" content="" />
     <link rel="canonical" href="#" />
     <meta name="robots" content="index, follow" />
@@ -16,8 +14,6 @@
     <meta property="og:title" content="Home | Oxford College" />
     <meta property="og:site_name" content="Oxford College" />
     <meta property="og:url" content="index.html" />
-    <meta property="og:description"
-        content="We are absolutely focused on improving the student experience We have high expectations for students and a commitment to excellence We set high professional standards for all staff We are constantly seeking to improve We all work, as a team, for the success of the Oxford College national and international community We expect everyone to be reliable and positive and to act in accordance with Oxford College principles and procedures We respect, value and care for all members ." />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="./assets/images/logo.png" />
 
@@ -118,7 +114,7 @@
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="online-application.html">Online Applications</a></li>
                                         <li>
-                                            <a href="award-of-degree.html">Award of
+                                            <a href="#">Award of
                                                 Degree</a>
                                         </li>
                                         <li><a href="--------.html">Rules & Regulations</a></li>
@@ -176,186 +172,24 @@
     <section class="campus-visit-area" style="margin-top: 120px">
         <div class="container" style="margin-bottom: 20px">
             <div class="section-title-2">
-                <h4 style="margin: 0px 0px 20px -15px">Evaluation process</h4>
+                <h4 style="margin: 0px 0px 20px -15px">Award of Degree</h4>
             </div>
             <div class="row justify-content-center">
                 <div class="campus-content-col">
                     <p>
-                        A student’s academic progress is examined through one or more of
-                        the following methods as decided by the Course Coordinator and
-                        duly approved by the Dean, Academic.
-                    </p>
-                    <ul style="margin-left: 40px">
-                        <li>• Assignment</li>
-                        <li>• Quiz</li>
-                        <li>• Sessional</li>
-                        <li>• Project Report</li>
-                        <li>• Review</li>
-                        <li>• Seminar</li>
-                        <li>• Group Discussion</li>
-                        <li>• In Class Participation / Active Learning</li>
-                        <li>• Case Study Report</li>
-                        <li>• Capstone Design Project</li>
-                        <li>• Simulation</li>
-                        <li>• Comprehensive Exam</li>
-                    </ul>
-                    <br />
-                    <p>
-                        The Sessional tests and the Semester-End Examinations will be
-                        conducted as per the Academic Calendar.
-                        <br />
-                        As per the necessity, the Supplementary examinations will be
-                        conducted at the discretion of Vice Chancellor.
-                        <br />
-                        Students may have to take more than one examination in a day
-                        either during Sessional, Semester End Examinations /Supplementary
-                        examination.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="container" style="margin-bottom: 20px">
-            <div class="section-title-2">
-                <h4 style="margin: 0px 0px 20px -15px">In-Semester Evaluation</h4>
-            </div>
-            <div class="row justify-content-center">
-                <div class="campus-content-col">
-                    <p>
-                        The process of evaluation should be continuous throughout the
-                        semester and involves components as listed in course handout
-                        <br />
-                        <br />
-                        The maximum distribution of marks for In-Semester evaluation must
-                        not exceed 60% of aggregate marks of the course
-                        <br />
-                        <br />
-                        The distribution of weightage for various evaluation components
-                        will be decided and notified by the course coordinator through the
-                        course handout after approval by the Dean Academics, at the
-                        beginning of the semester.
-                        <br />
-                        <br />
-                        The students are informed of the syllabus to be covered and the
-                        question paper pattern
-                        <br />
-                        <br />
-                        During a semester there shall be maximum of 2 In-semester
-                        sessional tests of comprehensive type for a duration of 2 hours
-                        <br />
-                        <br />
-                        Each student shall be examined in all the topics of a Course
-                        Outcome (CO) of respective course and hence there shall be a
-                        minimum of one question from each topic of CO.
-                        <br />
-                        <br />
-                        Each question shall contain a question on all Blooms Taxonomy
-                        Levels (BTL), for which the course is designed.
-                        <br />
-                        <br />
-                        In order to maintain transparency in evaluation, answer scripts
-                        will be shown to the students for verification, within one week of
-                        conduct of exam. If there is any discrepancy in evaluation, the
-                        student can request the course coordinator to re-evaluate.
-                        <br />
-                        <br />
-                        The solution key and scheme of evaluation for all examinations
-                        will be displayed in the appropriate web portal of the course,
-                        within 2 days after the conduct of examination, by the course
-                        coordinator.
-                        <br />
-                        <br />
-                        The evaluation of outcomes through Active Learning tools will be
-                        carried out by using either direct or indirect methods depending
-                        on the type of course.
-                        <br /><br />
-                        The direct assessment method includes Lab taken to class,
-                        Tutorials, Home assignment etc., where as indirect method include
-                        the following tools that uses Rubrics to evaluate students:
-                    </p>
-                    <ul style="margin-left: 40px">
-                        <li>• Assignment</li>
-                        <li>• Quiz</li>
-                        <li>• Sessional</li>
-                        <li>• Project Report</li>
-                        <li>• Review</li>
-                        <li>• Seminar</li>
-                        <li>• Group Discussion</li>
-                        <li>• In Class Participation / Active Learning</li>
-                        <li>• Case Study Report</li>
-                        <li>• Capstone Design Project</li>
-                        <li>• Simulation</li>
-                        <li>• Comprehensive Exam</li>
-                    </ul>
-                    <p>
-                        No correction is permitted once the course coordinator submits the
-                        marks/grades to the Controller of Examination. <br /><br />
-                        In case the student is unable to appear for any such examination
-                        owing to medical grounds, participation in extra/ co curricular
-                        activities representing KLEF/ state/ country; make up examination
-                        may be conducted as per the discretion of the Director / Principal
-                        of concerned College/ school after approval by the Dean Academics.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="container" style="margin-bottom: 20px">
-            <div class="section-title-2">
-                <h4 style="margin: 0px 0px 20px -15px">End-Semester Evaluation</h4>
-            </div>
-            <div class="row justify-content-center">
-                <div class="campus-content-col">
-                    <p>
-                        End-semester examination shall be of comprehensive type and
-                        conducted for duration of 3 hours. <br /><br />
-                        Student will be examined in each CO as defined for each course.
-                        However, COs that are not examined during continuous In-semester
-                        evaluation, shall be examined during End-semester exams, weightage
-                        to ensure the equal distribution to all COs.
-                        <br /><br />
-                        All UG answer scripts will be valued by single examiner and the
-                        marks awarded in single valuation shall be taken as the final
-                        mark.
-                        <br /><br />
-                        All PG answer scripts will be double valued by one valuation from
-                        internal examiner and second valuation from external examiner and
-                        the marks awarded in average valuation shall be taken as the final
-                        mark.
-                        <br /><br />
-
-                        The entire course team including course coordinator of the
-                        respective course shall be participated in valuation of answer
-                        scripts.
-                        <br /><br />
-                        The marks secured by the students will be scaled to the
-                        appropriate weightage
-                        <br /><br />
-                        Revaluation of answer scripts is allowed only in respect of
-                        semester end theory Examinations.
-                        <br /><br />
-                        For internal assessment tests, practical examinations,
-                        dissertation, thesis, viva voce etc., there is no revaluation.
-                        <br /><br />
-                        Application for revaluation should be in the prescribed form.
-                        <br /><br />
-                        The last date for submission of application and payment of fee for
-                        revaluation is announced by the Examination Branch. Late
-                        applications should not be entertained.
-                        <br /><br />
-                        After receiving the valued answer scripts from the Re-examiner
-                        along with Award lists of marks with columns duly filled in, are
-                        scrutinized to see that all the answers are valued, marks are
-                        correctly posted on the title sheet of the answer booklet and the
-                        total is verified.
-                        <br /><br />
-                        If the marks obtained in revaluation is higher, it will be
-                        considered for revising the “grading” by the Controller of
-                        Examinations with the concurrence of result committee and then
-                        submitted to the V.C for his kind approval for publishing the
-                        result, and displaying on the University website. These revised
-                        grades obtained on revaluation should be printed on the grade
-                        cards.
+                        For B.Tech, M.Tech, B.Arch, all B.S.c and M.S.c , M.A, Arts,Fine-Arts B.com, MBA:
+                        <br>
+                        A student having cleared all the courses and met all the requirements for the award of
+                        degree with
+                        <br><br><br>
+                        <strong> a.</strong> 5.5 ≤ CGPA < 5.75 will be awarded Pass class <br>
+                            <strong> b.</strong> 5.75 ≤
+                            CGPA < 6.75 will be awarded Second-class <br>
+                                <strong>c. </strong> 6.75 ≤ CGPA < 7.75 will be awarded First class <br>
+                                    <strong> d.</strong> CGPA ≥ 7.75 will be awarded First class
+                                    with Distinction provided the student has cleared all the courses in
+                                    first attempt and must have fulfilled all the program requirements in program
+                                    specified minimum years duration.
                     </p>
                 </div>
             </div>
@@ -385,25 +219,25 @@
                         <h4 class="quick-links-para-text">Download</h4>
                         <div class="footer-link mt-45">
                             <ul class="link-list">
-                                <li><a href="assets/pdf/LCM%20Courses.pdf">Course</a></li>
+                                <li><a href="">Course</a></li>
                                 <li>
-                                    <a href="assets/pdf/LCM%20Centre%20Application%20Form.pdf">Center Application
+                                    <a href="">Center Application
                                         Form</a>
                                 </li>
                                 <li>
-                                    <a href="assets/pdf/LCM%20Staff%20Application%20Form%20ORIGINAL%20new.pdf">Staff
+                                    <a href="">Staff
                                         Application Form</a>
                                 </li>
                                 <li>
-                                    <a href="assets/pdf/LCM%20Student%20Training%20Form%20new.pdf%20form%20new.html">Student
+                                    <a href="">Student
                                         Training Form</a>
                                 </li>
                                 <li>
-                                    <a href="assets/images/LCM_Overseas_Student_Application_Form.doc">Overseas student
+                                    <a href="">Overseas student
                                         application form</a>
                                 </li>
                                 <li>
-                                    <a href="assets/pdf/Safeguarding%20LCM.pdf">Safeguarding Oxford</a>
+                                    <a href="">Safeguarding Oxford</a>
                                 </li>
                             </ul>
                         </div>
