--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,23 @@
 <head>
   <meta charset="utf-8" />
 
-  <!--====== Title ======-->
+  <!--====== title         ======-->
+
   <title>Oxford College</title>
-  <meta name="keywords" content="" />
-  <link rel="canonical" href="#" />
-  <meta name="robots" content="index, follow" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta property="og:title" content="Home | Oxford College" />
+  <meta property="og:title" content="Contact | Oxford College" />
   <meta property="og:site_name" content="Oxford College" />
-  <meta property="og:url" content="index.html" />
+  <meta property="og:url" content="contact.html" />
+  <meta property="og:description" content="Address (Head Office)
+  Harben House,
+  Tickford Street,
+  Newport Pagnell,
+  Milton Keynes,
+  MK16 9EY,
+  United Kingdom" />
   <meta property="og:type" content="article" />
+  <meta property="og:image" content="assets/images/logo.png" />
 
   <!--====== Favicon Icon ======-->
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png" />
@@ -35,11 +41,16 @@
 
   <!--====== Main Style CSS ======-->
   <link rel="stylesheet" href="assets/css/style.css" />
+
+  <!--====== Use the minified version files listed below for better performance and remove the files listed above ======-->
+
+  <!-- <link rel="stylesheet" href="assets/css/vendor/plugins.min.css">
+    <link rel="stylesheet" href="assets/css/style.min.css"> -->
 </head>
 
 <body>
   <div class="loader"></div>
-
+  <div class="loader"></div>
   <!--====== Header Start ======-->
 
   <header class="header-area">
@@ -99,10 +110,10 @@
                 <li>
                   <a href="#">Admissions</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li><a href="https://www.othm.org.uk/qualification.html">Diploma</a></li>
-                    <li><a href="https://www.othm.org.uk/qualification.html">Undergraduate</a></li>
-                    <li><a href="https://www.othm.org.uk/qualification.html">Postgraduate</a></li>
-                    <li><a href="https://www.othm.org.uk/qualification.html">Doctorate</a></li>
+                    <li><a href="diploma.html">Diploma</a></li>
+                    <li><a href="undergraduate.html">Undergraduate</a></li>
+                    <li><a href="postgraduate.html">Postgraduate</a></li>
+                    <li><a href="doctorate.html">Doctorate</a></li>
                     <li></li>
                   </ul>
                 </li>
@@ -165,159 +176,116 @@
 
   <!--====== Header Ends ======-->
 
-  <!--====== Slider Start ======-->
+  <!--====== Page Banner Start ======-->
 
-  <section class="slider-area slider-02 slider-active">
-    <div class="single-slider d-flex align-items-center bg_cover"
-      style="background-image: url(assets/images/slider-1.png); height: 80vh">
+  <section class="page-banner">
+    <div class="page-banner-bg bg_cover counter-wrapper-2" style="
+          background-image: url(assets/images/contact-banner.jpg);
+          max-height: 40vh;
+        ">
       <div class="container">
-        <div class="slider-content slider-content-2">
-          <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s" style="font-size: 50px">
-            Be Prepared To Choose Wisely, Express Yourself To Succeed In Life.
-          </h2>
-          <ul class="slider-btn">
-            <li>
-              <a data-animation="fadeInLeft" data-delay="0.6s" class="main-btn main-btn-2" href="about-us.html">Learn
-                More</a>
-            </li>
-            <li>
-              <a data-animation="fadeInLeft" data-delay="1s" class="main-btn" href="contact.html"
-                target="_blank">Contact
-                Us</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="single-slider d-flex align-items-center bg_cover"
-      style="background-image: url(assets/images/slider-2.png); height: 80vh">
-      <div class="container">
-        <div class="slider-content slider-content-2">
-          <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s" style="font-size: 50px">
-            We Are Right Person For Your Educations Teaching
-          </h2>
-          <ul class="slider-btn">
-            <li>
-              <a data-animation="fadeInLeft" data-delay="0.6s" class="main-btn main-btn-2" href="about-us.html">Learn
-                More</a>
-            </li>
-            <li>
-              <a data-animation="fadeInLeft" data-delay="1s" class="main-btn" href="contact.html"
-                target="_blank">Contact
-                Us</a>
-            </li>
-          </ul>
+        <div class="banner-content text-center" style="padding-bottom: 0px;">
+          <h2 class="title">Contact Us</h2>
         </div>
       </div>
     </div>
   </section>
 
-  <!--====== Slider Ends ======-->
-  <!--====== History of Oxford ======-->
-  <section class="campus-visit-area" id="history_section">
-    <div class="col-12">
-      <div class="section-title-2 text-center">
-        <h2 class="title text-center">History of Oxford</h2>
-        <span class="line"></span>
-      </div>
-    </div>
-    <div class="container bg-overlay">
-      <div class="row justify-content-center">
-        <div class="campus-content-col">
-          <div class="campus-content">
-            <p style="color: rgb(115 132 158)">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Repudiandae consequatur minima perspiciatis veritatis non totam
-              sint. Maxime accusantium enim voluptate quibusdam doloremque et
-              quas architecto nulla odit necessitatibus cum vel ad dolor
-              distinctio nesciunt, cumque non dolorem nisi blanditiis
-              molestiae. Veniam, nihil. Laborum quod earum facilis inventore
-              delectus pariatur enim culpa cumque magnam dignissimos, velit
-              distinctio. Laboriosam explicabo minus illo ea, dicta ex ut
-              cumque labore deleniti nesciunt repellendus sequi quod
-              reiciendis minima nulla, cupiditate aliquam soluta magnam
-              dignissimos consequuntur quisquam temporibus vitae asperiores
-              quasi! Asperiores praesentium porro molestiae aperiam quos.
-              Voluptatum, fuga blanditiis! Quis nostrum distinctio laboriosam
-              nulla molestias.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <!--====== Page Banner Ends ======-->
 
-  <section class="online-library-area">
+  <!--====== Contact Start ======-->
+
+  <section class="contact-area mb-5 pt-1">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-8">
-          <div class="section-title-2 text-center">
-            <h2 class="title">Accreditation & Partnership</h2>
-            <span class="line"></span>
+      <section class="campus-visit-area">
+        <div class="container">
+          <div class="campus-visit-wrapper">
+            <div class="campus-image-col">
+              <div class="campus-image">
+                <div class="single-campus">
+                  <img src="assets/images/contact.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="campus-content-col">
+              <div class="campus-content">
+                <h4 class="campus-title">Head Office</h4>
+                <span class="line"></span>
+                <div class="single-contact-info mt-30">
+                  <div class="info-icon">
+                    <i class="fas fa-map-marker-alt"></i>
+                  </div>
+                  <div class="info-content">
+                    <p>
+                      Harben House,<br>
+                      Tickford Street <br>
+                      Newport Pagnell <br>
+                      Milton Keynes <br>
+                      MK16 9EY <br>
+                      United Kingdom <br>
+                    </p>
+                  </div>
+                </div>
+                <div class="single-contact-info mt-40">
+                  <div class="info-icon">
+                    <i class="fas fa-phone"></i>
+                  </div>
+                  <div class="info-content">
+                    <p>
+                      Phone:
+                      <a href="tel:+44(0)7448810609">+44(0)7448810609</a><br />
+                      WhatsApp:
+                      <a href="https://wa.me/447944619978"> +44(0)7944619978</a>
+                      <br />
+                    </p>
+                  </div>
+                </div>
+                <div class="single-contact-info mt-30">
+                  <div class="info-icon">
+                    <i class="fas fa-globe"></i>
+                  </div>
+                  <div class="info-content">
+                    <p>
+                      <a href="mailto:info@oxford-college.com">
+                        info@oxford-college.com</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="contact-form">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="contact-title text-center" style="color: #060d5b">
+              <h3 class="title" style="color: #060d5b">
+                Leave a message here
+              </h3>
+              <p>
+                Here is our event schedule where you can get information about
+                time schedule about this event so it's very easy for you to
+                manage your time and schedule
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="contact-form-wrapper">
+              <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSe-t4ksEsBijjxOhAl4UhimC2Z3heLkem2FiN9wKqp4FPMMZA/viewform?embedded=true"
+                width="800" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container" style="margin-top: 24px">
-        <section class="customer-logos slider">
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/1.jpeg" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/2.JPG" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/3.png" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/4.jpg" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/5.png" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/6.png" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/7.jpeg" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/8.jpeg" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/9.png" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/10.png" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/11.jpg" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/12.png" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/13.jpeg" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/14.JPG" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/15.jpeg" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/16.png" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/17.png" />
-          </div>
-          <div class="slide">
-            <img class="logo-size" src="assets/images/accreditation/18.jpeg" />
-          </div>
-        </section>
-      </div>
     </div>
   </section>
+
+  <!--====== Contact Ends ======-->
 
   <!--====== Footer Start ======-->
 
@@ -342,23 +310,23 @@
             <h4 class="quick-links-para-text">Download</h4>
             <div class="footer-link mt-45">
               <ul class="link-list">
-                <li><a href="####">Course</a></li>
+                <li><a href="">Course</a></li>
                 <li>
-                  <a href="####">Center Application Form</a>
+                  <a href="">Center Application Form</a>
                 </li>
                 <li>
-                  <a href="####">Staff Application Form</a>
+                  <a href="">Staff Application Form</a>
                 </li>
                 <li>
-                  <a href="####">Student Training
+                  <a href="">Student Training
                     Form</a>
                 </li>
                 <li>
-                  <a href="####">Overseas student application
+                  <a href="">Overseas student application
                     form</a>
                 </li>
                 <li>
-                  <a href="####">Safeguarding Oxford</a>
+                  <a href="">Safeguarding Oxford</a>
                 </li>
               </ul>
             </div>
@@ -432,6 +400,7 @@
   </section>
 
   <!--====== Footer Ends ======-->
+
   <!--====== BACK TOP TOP PART START ======-->
 
   <a href="#" class="back-to-top"><i class="fal fa-chevron-up"></i></a>
@@ -445,7 +414,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-">
-
+                    
                 </div>
             </div>
         </div>
@@ -469,40 +438,12 @@
   <script src="assets/js/plugins/wow.min.js"></script>
   <script src="assets/js/plugins/ajax-contact.js"></script>
 
+  <!--====== Use the minified version files listed below for better performance and remove the files listed above ======-->
+
+  <!-- <script src="assets/js/plugin.min.js"></script> -->
 
   <!--====== Main Activation  js ======-->
   <script src="assets/js/main.js"></script>
-  <script>
-    $(document).ready(function () {
-      $(".customer-logos").slick({
-        slidesToShow: 4,
-        slidesToScroll: 1,
-        autoplay: true,
-        autoplaySpeed: 1000,
-        arrows: false,
-        dots: false,
-        pauseOnHover: false,
-        responsive: [
-          {
-            breakpoint: 768,
-            settings: {
-              slidesToShow: 4,
-            },
-          },
-          {
-            breakpoint: 520,
-            settings: {
-              slidesToShow: 3,
-            },
-          },
-        ],
-      });
-    });
-  </script>
-  <script>
-    $(".loader").fadeOut(2800, function () { });
-  </script>
-
   <div class="loader"></div>
   <script>
     $(".loader").fadeOut(2800, function () { });
