--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
-<!-- Mirrored from www.londoncollegeofmedia.com/gallery by HTTrack Website Copier/3.x [XR&CO'2017], Tue, 07 Jun 2022 14:51:31 GMT -->
-
 <head>
   <meta charset="utf-8" />
 
@@ -10,12 +8,12 @@
   <title>Oxford College</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta property="og:title" content="Gallery | London college of media" />
-  <meta property="og:site_name" content="London college of media" />
+  <meta property="og:title" content="Gallery | Oxford College" />
+  <meta property="og:site_name" content="Oxford College" />
   <meta property="og:url" content="gallery.html" />
   <meta property="og:description" content="" />
   <meta property="og:type" content="article" />
-  <meta property="og:image" content="../londoncollegeofmedia/assets/images/logo.png" />
+  <meta property="og:image" content="./assets/images/logo.png" />
 
   <!--====== Favicon Icon ======-->
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png" />
@@ -97,7 +95,6 @@
                   <ul class="nav-dropdown nav-submenu">
                     <li><a href="why-lcm.html">Why Oxford</a></li>
                     <li><a href="study-lcm">Study at Oxford</a></li>
-                    <li><a href="our-team.html">Our Team</a></li>
                   </ul>
                 </li>
 
@@ -115,8 +112,8 @@
                 <li>
                   <a href="#">Academics</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li><a href="--------.html">Online Applications</a></li>
-                    <li><a href="--------.html">Award of Degree</a></li>
+                    <li><a href="online-application.html">Online Applications</a></li>
+                    <li><a href="award-of-degree.html">Award of Degree</a></li>
                     <li><a href="--------.html">Rules & Regulations</a></li>
                     <li><a href="--------.html">Teaching & Evaluation</a></li>
                     <li><a href="--------.html">Programmes Offered</a></li>
@@ -417,6 +414,5 @@
   </script>
 </body>
 
-<!-- Mirrored from www.londoncollegeofmedia.com/gallery by HTTrack Website Copier/3.x [XR&CO'2017], Tue, 07 Jun 2022 15:08:19 GMT -->
 
 </html>
