--- a/award-of-degree.html
+++ b/award-of-degree.html
@@ -118,8 +118,8 @@
                                                 Degree</a>
                                         </li>
                                         <li><a href="--------.html">Rules & Regulations</a></li>
-                                        <li><a href="#">Teaching & Evaluation</a></li>
-                                        <li><a href="--------.html">Programmes Offered</a></li>
+                                        <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
+                                        <li><a href="programmes-offered.html">Programmes Offered</a></li>
                                     </ul>
                                 </li>
 
