--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <li><a href="award-of-degree.html">Award of Degree</a></li>
                     <li><a href="--------.html">Rules & Regulations</a></li>
                     <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
-                    <li><a href="--------.html">Programmes Offered</a></li>
+                    <li><a href="programmes-offered.html">Programmes Offered</a></li>
                   </ul>
                 </li>
 
