--- a/programmes-offered.html
+++ b/programmes-offered.html
@@ -114,12 +114,12 @@
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="online-application.html">Online Applications</a></li>
                                         <li>
-                                            <a href="#">Award of
+                                            <a href="award-of-degree.html">Award of
                                                 Degree</a>
                                         </li>
                                         <li><a href="--------.html">Rules & Regulations</a></li>
-                                        <li><a href="#">Teaching & Evaluation</a></li>
-                                        <li><a href="--------.html">Programmes Offered</a></li>
+                                        <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
+                                        <li><a href="#">Programmes Offered</a></li>
                                     </ul>
                                 </li>
 
