--- a/gallery.html
+++ b/gallery.html
@@ -115,8 +115,8 @@
                     <li><a href="online-application.html">Online Applications</a></li>
                     <li><a href="award-of-degree.html">Award of Degree</a></li>
                     <li><a href="--------.html">Rules & Regulations</a></li>
-                    <li><a href="--------.html">Teaching & Evaluation</a></li>
-                    <li><a href="--------.html">Programmes Offered</a></li>
+                    <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
+                    <li><a href="programmes-offered.html">Programmes Offered</a></li>
                   </ul>
                 </li>
 
