--- a/teaching-regulation.html
+++ b/teaching-regulation.html
@@ -123,7 +123,7 @@
                                         </li>
                                         <li><a href="--------.html">Rules & Regulations</a></li>
                                         <li><a href="#">Teaching & Evaluation</a></li>
-                                        <li><a href="--------.html">Programmes Offered</a></li>
+                                        <li><a href="programmes-offered.html">Programmes Offered</a></li>
                                     </ul>
                                 </li>
 
